[package]
name = "acpi-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### TODO this is a temporary hack to obtain the latest code with my fixes merged in
acpi = { git = "https://github.com/alnyan/acpi", branch = "acpi-system" }
### TODO this is a temporary hack to obtain the latest code with my fixes merged in
aml = { git = "https://github.com/alnyan/acpi", branch = "acpi-system" }
log = "0.4.20"
bit_field = "0.10"
